automatically backed up by learn

--- a/main.css
+++ b/main.css
@@ -14,4 +14,27 @@ div {
   background-color: blue;
 }
 
+#red {
+  background-color: #f00;
+}
 
+#orange {
+  background-color: #ffa500;
+}
+
+#yellow {
+  background-color: #ff0;
+}
+
+
+#green {
+  background-color: #00bc3f;
+}
+
+#blue {
+  background-color: #06f;
+}
+
+#indigo {
+  background-color: #8a2be2;
+}
