--- a/main.css
+++ b/main.css
@@ -15,26 +15,26 @@ div {
 }
 
 #red {
-  background-color: #f00;
+  border-top-color: #f00;
 }
 
 #orange {
-  background-color: #ffa500;
+  border-top-color: #ffa500;
 }
 
 #yellow {
-  background-color: #ff0;
+ border-top-color: #ff0;
 }
 
 
 #green {
-  background-color: #00bc3f;
+  border-top-color: #00bc3f;
 }
 
 #blue {
-  background-color: #06f;
+  border-top-color: #06f;
 }
 
 #indigo {
-  background-color: #8a2be2;
+  border-top-color: #8a2be2;
 }
