--- a/main.css
+++ b/main.css
@@ -10,9 +10,9 @@ div {
   border-bottom-color: transparent; /* and the bottom of the circle */
 }
 
-#violet {
+/*#violet {
   border-top-color: blue;
-}
+}*/
 
 #red {
   border-top-color: #f00;
